# MultilingualSubtitles

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/multilingual_subtitles/: __init__.py  cli.py  pipeline.py  types.py
src/multilingual_subtitles/llm/: __init__.py  api.py  mock_backend.py
src/multilingual_subtitles/stt/: __init__.py  api.py  mock_backend.py  vosk_backend.py  whisper_backend.py  whisper_web_backend.py
tests/: test_cli.py  test_llm.py  test_pipeline.py  test_stt.py
