[project]
name = "multilingual_subtitles"
description = "Generate and translate subtitles from video using local AI models"
version = "0.0.1"
authors = [{ name = "bjohnson66" }]
readme.content-type = "text/markdown"
readme.file = "README.md"
license = { text = "Unlicense" }
requires-python = ">=3.9"

dependencies = [
    "ffmpeg-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "setuptools"
]

whisper = [
    "openai-whisper"
]

vosk = [
    "vosk"
]

all = [
    "openai-whisper",
    "vosk"
]

[project.scripts]
subgen = "multilingual_subtitles.cli:main"

[build-system]
requires = ["setuptools", "wheel", ]
build-backend = "setuptools.build_meta"